--- a/composer.json
+++ b/composer.json
@@ -9,7 +9,9 @@
         }
     ],
     "require-dev": {
-        "phpunit/phpunit": "^10.4"
+        "phpunit/phpunit": "^10.4",
+        "php-parallel-lint/php-parallel-lint": "^1.3",
+        "squizlabs/php_codesniffer": "^3.6"
     },
     "autoload": {
         "psr-4": {
@@ -17,6 +19,9 @@
         }
     },
     "scripts": {
-        "test": "./vendor/bin/phpunit --colors=always --testdox tests/Integration/"
+        "test": "./vendor/bin/phpunit --colors=always --testdox",
+        "lint": "parallel-lint --exclude vendor .",
+        "check-format": "phpcs --standard=PSR12 src tests",
+        "fix-style": "phpcbf --standard=PSR12 src tests"
     }
 }
