add php 8.1 requirement to composer and update workflow file to not test on 8.0

--- a/.github/workflows/pullrequest.yml
+++ b/.github/workflows/pullrequest.yml
@@ -1,8 +1,6 @@
 name: PhpSecureToken CI
 
 on:
-  push:
-    branches: [ main ]
   pull_request:
     branches: [ main ]
 
@@ -12,7 +10,7 @@ jobs:
 
     strategy:
       matrix:
-        php-versions: ['8.0', '8.1']  # Specify PHP versions here
+        php-versions: ['8.1']  # Specify PHP versions here
 
     steps:
     - uses: actions/checkout@v2
