--- a/composer.json
+++ b/composer.json
@@ -8,6 +8,9 @@
             "email": "dmccarthy2012@hotmail.co.uk"
         }
     ],
+    "require": {
+        "php": "^8.1"
+    },
     "require-dev": {
         "phpunit/phpunit": "^10.4",
         "php-parallel-lint/php-parallel-lint": "^1.3",
