add functionality to support JWT's formatted as JWE's.  Added support for aes-256-gcm  Authenticated encyrption and RsaOaep for envelope encyrption

--- a/composer.json
+++ b/composer.json
@@ -23,6 +23,7 @@
     },
     "scripts": {
         "test": "./vendor/bin/phpunit --colors=always --testdox",
+        "test-jwe": "./vendor/bin/phpunit --colors=always --testdox tests/Integration/JweTest.php",
         "lint": "parallel-lint --exclude vendor .",
         "check-format": "phpcs --standard=PSR12 src tests",
         "fix-style": "phpcbf --standard=PSR12 src tests"
